Removed java.net.URL and add java.net.http.HttpClient